--- a/app/assets/stylesheets/fix_tasks.scss
+++ b/app/assets/stylesheets/fix_tasks.scss
@@ -15,3 +15,10 @@ table th,table td{
 table tr:nth-child(odd){
   background-color: #eee
 }
+
+.under-line {
+  th {
+    border-bottom: 3px solid #000;
+    font-size: 13px;
+  }
+}
