--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -108,8 +108,11 @@ a.btn--orange:hover {
   }
 }
 
+.text-bottom {
+  margin-bottom: 20px;
+}
+
 .top-text-area{
-  margin-bottom: 80px;
   background-color: #C0C0C0;
   opacity: 0.7;
   padding-top: 20px;
