--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -97,6 +97,11 @@ a.btn--orange:hover {
   margin-right: 20px;
 }
 
+.company-logo {
+  float: left;
+  margin-left: 20px;
+}
+
 .form-marge {
   margin-left: 190px;
 }
