フォントサイズ修正

--- a/app/views/tasks/_fix_tasks_fields.html.haml
+++ b/app/views/tasks/_fix_tasks_fields.html.haml
@@ -1,5 +1,5 @@
 .nested-fields
-  %div.period.cp_iptxt
+  %div.period.cp_iptxt.text-size
     = f.select :period, [["月", "月"], ["週", "週"], ["日", "日"]], include_blank: "周期"
     %p
       ※日・・・始業時から終業時までの仕事。
