--- a/app/views/tasks/_intent-use.html.haml
+++ b/app/views/tasks/_intent-use.html.haml
@@ -1,4 +1,4 @@
-.notes.text-bottom.text-center.intent-use
+.notes.text-bottom.text-center.intent-use.text-size
   %p
     皆さんの仕事を【記入の仕方】を参考に入力してください。
     %br
