--- a/app/views/fix_tasks/index.html.haml
+++ b/app/views/fix_tasks/index.html.haml
@@ -9,6 +9,8 @@
   %th
     = ""
   %th
+    = "会社名"
+  %th
     = "部門"
   %th
     = "等級"
@@ -22,6 +24,8 @@
     %tr
       %td
         = task&.id
+      %td
+        = task.task&.company_name
       %td
         = task.task&.department
       %td
