必須米印サイズ変更

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -126,6 +126,12 @@ a.btn--orange:hover {
 
 .required .control-label:after {
   content:"*";color:red;
+  font-size: 20px;
+}
+
+.non-required .control-label:after {
+  content:"*";color:white;
+  font-size: 20px;
 }
 
 .require-alert {
