--- a/app/views/tasks/_fix_tasks_fields.html.haml
+++ b/app/views/tasks/_fix_tasks_fields.html.haml
@@ -1,11 +1,14 @@
 .nested-fields
-  %div.period.cp_iptxt.text-size
-    = f.select :period, [["月", "月"], ["週", "週"], ["日", "日"]], include_blank: "周期"
-    %p
-      ※日・・・始業時から終業時までの仕事。
-      %br
-      &nbsp;&nbsp;週・・・週単位で発生する仕事。
-      %br
-      &nbsp;&nbsp;月・・・月・半年・年単位で発生する仕事。
+  %div.period.text-size
+    = f.label '周期', class:"control-label label-size"
+    .cp_iptxt
+      = f.select :period, [["月", "月"], ["週", "週"], ["日", "日"]], include_blank: "周期"
+      %p
+        ※日・・・始業時から終業時までの仕事。
+        %br
+        &nbsp;&nbsp;週・・・週単位で発生する仕事。
+        %br
+        &nbsp;&nbsp;月・・・月・半年・年単位で発生する仕事。
   .form-group.mt-5
+    = f.label '仕事内容', class:"control-label label-size"
     = f.text_area :job_description, rows: 3,  cols: 80, placeholder: "仕事内容", class: "tf form-control"
