--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -135,12 +135,13 @@ a.btn--orange:hover {
 }
 
 .require-alert {
-  background-color:red;
+  background-color:#f57d7d;
   opacity: 0.7;
   padding-bottom: 10px;
   padding-top: 10px;
   padding-left: 10px;
   border-radius: 3px;
+  color: rgb(12, 12, 12);
 }
 
 .form-group {
