注意書き追加

--- a/app/views/tasks/_intent-use.html.haml
+++ b/app/views/tasks/_intent-use.html.haml
@@ -5,3 +5,10 @@
     仕事を「見える化」して評価項目に活用します。
     %br
     より具体的で、納得できる評価項目を作成します。
+    %br
+    %br
+    最低でも10個は入力してください。
+    %br
+    入力は再下段の「送信」ボタンを押下してください。
+    %br
+    送信された内容は管理者(コンサルタント)へ直接送信されます。
